--- a/client/package.json
+++ b/client/package.json
@@ -34,14 +34,17 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.2",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
+    "@types/jquery": "^3.3.5",
     "angular2-jwt": "^0.2.3",
     "bootstrap-social": "^5.1.1",
     "client-oauth2": "^4.1.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "intro.js": "^2.9.3",
+    "jquery": "^3.3.1",
     "konva": "^2.1.8",
     "ng2-validation": "^4.2.0",
+    "roboto-fontface": "^0.10.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
