--- a/client/package.json
+++ b/client/package.json
@@ -44,7 +44,9 @@
     "intro.js": "^2.9.3",
     "jquery": "^3.3.1",
     "konva": "^2.1.8",
+    "ng2-nouislider": "^1.7.12",
     "ng2-validation": "^4.2.0",
+    "nouislider": "^11.1.0",
     "roboto-fontface": "^0.10.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
