--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,11 @@
     "translation": "ngx-translate-extract --input ./src --output ./src/assets/i18n/*.json --clean --sort --format namespaced-json --marker TRANSLATE",
     "build:en": "npm run build -- --env=prod-en --output-path=dist/en --bh /en/ --aot",
     "build:he": "npm run build-rtl -- --env=prod-he --output-path=dist/he --bh /he/ --aot",
+    "build:staging": "npm run build -- --env=staging --output-path=dist/staging --bh /staging/ --aot",
     "build-all": "for lang in en he; do npm run build:$lang; done",
     "deploy:gh:en": "npm run build:en -- --base-href='https://artifish.github.io/artifish/' && ngh --repo https://github.com/artifish/artifish.git --dir dist/en",
     "deploy:gh:he": "npm run build:he -- --base-href='https://artifish.github.io/artifish.il/' && ngh --repo https://github.com/artifish/artifish.il.git --dir dist/he",
-    "deploy:gh:staging": "npm run build:en -- --base-href='https://artifish.github.io/artifish-staging/' && ngh --repo https://github.com/artifish/artifish-staging.git --dir dist/en",
+    "deploy:gh:staging": "npm run build:staging -- --base-href='https://artifish.github.io/artifish-staging/' && ngh --repo https://github.com/artifish/artifish-staging.git --dir dist/staging",
     "deploy:gh-all": "for lang in en he; do npm run deploy:gh:$lang; done"
   },
   "private": true,
