changed production server to mysql

--- a/artista-api/config/database.yml
+++ b/artista-api/config/database.yml
@@ -49,7 +49,4 @@ test:
 #
 production:
   <<: *default
-  adapter: postgresql
-  database: artista_production
-  username: artista
-  password: <%= ENV['ARTISTA_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
