Added google vision tagging and text query searches on tags

--- a/artista-api/Gemfile
+++ b/artista-api/Gemfile
@@ -51,6 +51,7 @@ gem "google-cloud-storage", "~> 1.8", require: false
 
 gem 'will_paginate'
 
+gem 'google-cloud-vision'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
