changed color to appcolor. added color-rgb gem for LAB comparasion

--- a/artista-api/Gemfile
+++ b/artista-api/Gemfile
@@ -53,6 +53,8 @@ gem 'will_paginate'
 
 gem 'google-cloud-vision'
 
+gem 'color-rgb'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
