--- a/artista-api/config/storage.yml
+++ b/artista-api/config/storage.yml
@@ -17,6 +17,9 @@ local:
 # Remember not to checkin your GCS keyfile to a repository
 google:
   service: GCS
+  <% if File.exist?(Rails.root.join("/home/deploy/artifish-google-keyfile.json"))%>
+  credentials: <%= Rails.root.join("/home/deploy/artifish-google-keyfile.json") %>
+  <% else %>
   credentials:
     type: "service_account"
     project_id: "artifish-app"
@@ -28,6 +31,7 @@ google:
     token_uri: "https://accounts.google.com/o/oauth2/token"
     auth_provider_x509_cert_url: "https://www.googleapis.com/oauth2/v1/certs"
     client_x509_cert_url: "https://www.googleapis.com/robot/v1/metadata/x509/artifish%40artifish-app.iam.gserviceaccount.com"
+  <% end %>
   project: "artifish"
   bucket: "artifish"
 
